--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+---
+---
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
