--- a/_sass/_base/_fonts.scss
+++ b/_sass/_base/_fonts.scss
@@ -1,3 +1,2 @@
-$primary-stack			:'Ubuntu', sans-serif;
-$secondary-stack		:'Ubuntu', sans-serif; 
-$tertiary-stack			:"Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+$primary-stack			:'Oswald', sans-serif;
+$secondary-stack		:Arial, sans-serif; 
