--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -5,6 +5,7 @@
 
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
+	<link href='http://fonts.googleapis.com/css?family=Oswald:300,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
