--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,3 +1,15 @@
-<header>
-	<div class="logo"></div>
+<header class="clearfix">
+	<div class="content clearfix">
+		<div class="span-5 col">
+			<img src="/img/common2x/logo.png"/>
+		</div>
+		<div class="span-7 col">
+			<ul class="unstyled inline">
+				<li><a href="#education">Education</a></li>
+				<li><a href="#training">Training</a></li>
+				<li><a href="#implementation">Implementation</a></li>
+				<li><a href="#about-us">About Us</a></li>
+			</ul>
+		</div>
+	</div>
 </header>
