--- a/_sass/_base/_colors.scss
+++ b/_sass/_base/_colors.scss
@@ -3,10 +3,10 @@ $warning-gold					:#D8C26C;
 $error-red						:#ed1c2e;
 $success-green					:#0da68e;
 
-$highlight						:#4e0102;
-$link-color						:#FFCBA8;
+$highlight						:#f3f3f3;
+$link-color						:#f3f3f3;
 $white 							:#ffffff;
 $off-white 						:#f2f2f2;
 $gray							:#dedede;
 $dark-gray						:#696760;
-$black							:#200105;
+$black							:#000000;
