--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,4 +1,9 @@
-<footer>
+<footer id="contact-us">
+	<div class="content">
+		<aside>
+			<h2>Contact Us</h2>
+		</aside>
+	</div>
 </footer>
 <script src="/js/libs/jquery-2.1.1.min.js"></script>
 <script src="/js/app.js"></script>
