--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,15 +1,18 @@
 <header class="clearfix">
-	<div class="content clearfix">
-		<div class="span-5 col">
+	<div class="content clearfix gutters">
+		<div class="span-4 col">
 			<img src="/img/common2x/logo.png"/>
 		</div>
-		<div class="span-7 col">
-			<ul class="unstyled inline">
-				<li><a href="#education">Education</a></li>
-				<li><a href="#training">Training</a></li>
-				<li><a href="#implementation">Implementation</a></li>
-				<li><a href="#about-us">About Us</a></li>
-			</ul>
+		<div class="span-8 col">
+			<nav>
+				<ul class="unstyled inline">
+					<li><a href="#education">Education</a></li>
+					<li><a href="#training">Training</a></li>
+					<li><a href="#implementation">Implementation</a></li>
+					<li><a href="#about-us">About Us</a></li>
+					<li><a href="#contact-us">Contact Us</a></li>
+				</ul>
+			</nav>
 		</div>
 	</div>
 </header>
