--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,7 +1,8 @@
 <footer id="contact-us">
 	<div class="content">
 		<aside>
-			<h2>Contact Us</h2>
+			<h2>Let's Work Together</h2>
+			<p class="summary">Give us a call at <a href="tel:(224) 534-9431">(224) 534-9431</a> or send us an email at <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a>
 		</aside>
 	</div>
 </footer>
