--- a/_sass/_base/_base.scss
+++ b/_sass/_base/_base.scss
@@ -165,7 +165,7 @@ ol.lower-roman{
    ========================================================================== */
 
 a {
-    color:$dark-gray;
+    color:$off-white;
 	text-decoration:none;
 }
 a:hover{
