--- a/_sass/_base/_colors.scss
+++ b/_sass/_base/_colors.scss
@@ -3,10 +3,13 @@ $warning-gold					:#D8C26C;
 $error-red						:#ed1c2e;
 $success-green					:#0da68e;
 
-$highlight						:#f3f3f3;
+$highlight						:#5972b6;
 $link-color						:#f3f3f3;
 $white 							:#ffffff;
 $off-white 						:#f2f2f2;
 $gray							:#dedede;
 $dark-gray						:#696760;
 $black							:#000000;
+$educated						:#e0e8ff;
+$trained						:#d5e0ff;
+$implement						:#c5d2f4;
