--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,18 +1,5 @@
 <header class="clearfix">
-	<div class="content clearfix gutters">
-		<div class="span-4 col">
-			<img src="/img/common2x/logo.png"/>
-		</div>
-		<div class="span-8 col">
-			<nav>
-				<ul class="unstyled inline">
-					<li><a href="#education">Education</a></li>
-					<li><a href="#training">Training</a></li>
-					<li><a href="#implementation">Implementation</a></li>
-					<li><a href="#about-us">About Us</a></li>
-					<li><a href="#contact-us">Contact Us</a></li>
-				</ul>
-			</nav>
-		</div>
+	<div class="content">
+			<img src="/img/common2x/logo.png" width="200px"/>
 	</div>
 </header>
