--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,9 +1,7 @@
 <footer id="contact-us">
 	<div class="content">
-		<aside>
-			<h2>Let's Work Together</h2>
-			<p class="summary">Give us a call at <a href="tel:(224) 534-9431">(224) 534-9431</a> or send us an email at <a href="mailto:ebhcgroup@gmail.com">ebhcgroup@gmail.com</a>
-		</aside>
+		<p class="copyright">Copyright 2014 EBHC Group. All rights reserved.</p>
+		<p class="copyright">Icons made by Freepik, SimpleIcon from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>         is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></p>
 	</div>
 </footer>
 <script src="/js/libs/jquery-2.1.1.min.js"></script>
