--- a/_sass/_base/_fonts.scss
+++ b/_sass/_base/_fonts.scss
@@ -17,18 +17,22 @@ $icon-stack				:Flaticon;
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
 	font-family: Flaticon;
 font-style: normal;
-}.flaticon-online1:before {
+}
+.flaticon-arrow558:before {
 	content: "\e000";
 }
-.flaticon-open135:before {
+.flaticon-online1:before {
 	content: "\e001";
 }
-.flaticon-teacher12:before {
+.flaticon-open135:before {
 	content: "\e002";
 }
-.flaticon-teacher9:before {
+.flaticon-teacher12:before {
 	content: "\e003";
 }
-.flaticon-two174:before {
+.flaticon-teacher9:before {
 	content: "\e004";
+}
+.flaticon-two174:before {
+	content: "\e005";
 }
