--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{{ site.title }} | {{ page.title }}</title>
+    <title>{{ site.title }}</title>
     <meta name="description" content="{{ site.description }}">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:300,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
