--- a/_sass/_themes/_homepage.scss
+++ b/_sass/_themes/_homepage.scss
@@ -66,8 +66,10 @@ section{
 		}
 	}
  	&#hero{
-		background-image:$off-white;
+		background:$off-white;
+		background-image:none;
 		min-height:330px;
+		padding:0px 0px 10px;
 		.content{
 			margin-top:6em;
 		}
@@ -90,11 +92,16 @@ section{
 				font-weight:300;
 				margin:.5em 0 0;
 				font-size:1.2em;
+				letter-spacing:.1em;
+			}
+			a{
+				color:$black;
 			}
 		}
 	}
 	&#education{
 		background-color:$off-white;
+		border-top:5px solid $black;
 		.content{
 			padding:3% 0;
 		}
@@ -117,7 +124,7 @@ section{
 			}
 		}
 		.box{
-			min-height:580px;
+			min-height:655px;
 			padding:3%;
 			.icon{
 				line-height:.25em;
@@ -126,11 +133,12 @@ section{
 	}
 	&#training{
 		background-color:$off-white;
+		border-top:5px solid $black;
 		.content{
 			padding:3% 0;
 		}
 		.box{
-			height:485px;
+			min-height:485px;
 			padding:3%;
 			&.image{
 				background-image:url('../img/common2x/training.jpg');
@@ -158,6 +166,7 @@ section{
 		}
 	}
 	&#implementation{
+		border-top:5px solid $black;
 		background-color:$off-white;
 		aside{
 			h2{
@@ -180,6 +189,7 @@ section{
 		}
 	}
 	&#about-us{
+		border-top:5px solid $black;
 		background-color:$white;
 		.box{
 			padding:0 2%;
@@ -222,6 +232,8 @@ section{
 }
 footer{
 	background:$highlight;
+	border-top:5px solid $black;
+	border-bottom:5px solid $black;
 	width:100%;
 	padding:3% 0 5%;
 	.copyright{
@@ -246,14 +258,23 @@ footer{
 		background-attachment:fixed;
 		min-height:375px;
 		&#hero{
-			background-image:url('../img/common2x/hero.jpg');		
+			background-image:url('../img/common2x/hero.jpg');
+			background-position:center;	
+			background-size:cover;	
 			aside{
 				top:160px;
 				h1{
 					font-size:2.8em;
+					color:$off-white;
+					text-shadow:3px 3px 5px #000000;
 				}
 				p{
 					font-size:1.5em;
+					color:$off-white;
+					text-shadow:3px 3px 5px #000000;
+				}
+				a{
+					color:$white;
 				}
 			}
 		}
@@ -262,7 +283,7 @@ footer{
 @media only screen and (min-width: 48.000em) {
 	section{
 		&#hero{
-			min-height:576px;
+			min-height:450px;
 			.icon{
 				font-size:4.5em;
 				color:$white;
@@ -279,7 +300,7 @@ footer{
 @media only screen and (min-width: 65.000em) {
 	section{
 		&#hero{
-			min-height:768px;
+			min-height:450px;
 		}
 		&#about-us{
 			.box{
