--- a/_sass/_themes/_homepage.scss
+++ b/_sass/_themes/_homepage.scss
@@ -7,7 +7,7 @@ header{
 	background:transparent;
 	img{
 		display:block;
-		margin:20px auto 0px;
+		margin:20px 0px 0px;
 		max-width:400px;
 	}
 }
@@ -250,21 +250,39 @@ footer{
    ========================================================================== */
 
 @media only screen and (min-width: 31.250em) {
-	header{
-		.logo{
-			background-size:100% 100%;
-			width:327px;
-			height:113px;
-		}
-	}
 	section{
 		background-attachment:fixed;
 		min-height:375px;
 		&#hero{
 			background-image:url('../img/common2x/hero.jpg');
-			background-position:center;	
+		    background-position: top center;
 			background-size:cover;	
 			aside{
+				top:180px;
+				padding-top:10%;
+				h1{
+					font-size:2.2em;
+					color:$off-white;
+					text-shadow:3px 3px 5px #000000;
+				}
+				p{
+					font-size:1.3em;
+					color:$off-white;
+					text-shadow:3px 3px 5px #000000;
+				}
+				a{
+					color:$white;
+				}
+			}
+		}
+	}
+}
+@media only screen and (min-width: 48.000em) {
+	section{
+		&#hero{
+			min-height:450px;
+			aside{
+				padding-top:6%;
 				top:160px;
 				h1{
 					font-size:2.8em;
@@ -280,13 +298,6 @@ footer{
 					color:$white;
 				}
 			}
-		}
-	}
-}
-@media only screen and (min-width: 48.000em) {
-	section{
-		&#hero{
-			min-height:450px;
 			.icon{
 				font-size:4.5em;
 				color:$white;
@@ -307,7 +318,7 @@ footer{
 		}
 		&#about-us{
 			.box{
-				min-height:1240px;
+				min-height:1330px;
 			}
 	}	
 	}
